--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
     <div id="status-bar">
       <div class="status-bar__column">
         <span>No Servie</span>
-        <!--To Do : WIFI Icon-->
+        <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
         <span>18:43</span>
         <!--javascript로 시간을 실시간으로 넣을 수도 있을듯!-->
       </div>
       <div class="status-bar__column">
+        <i class="fas fa-lock"></i>
         <span>100%</span>
-        <!--battery Icon-->
-        <!--Lightening Icon-->
+        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-bolt"></i>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/004d579f6b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
