--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to KokoaTalk</title>
+    <title>Welcome to KokoaClone</title>
   </head>
   <body>
     <div id="status-bar">
@@ -22,6 +22,24 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <header class="welcome-header">
+      <!-- 여기서 그냥 header라고 하면 곤란해질 수 있어. 왜냐하면 다른 무수히 많은 페이지들이 생길 수 있는데 각 페이지별로 header들이 있을 수 있잖아. 그래서 해당 header를 identify해야됨. 그래서 class="welcome-header"라고 할 것임.-->
+      <h1 class="welcome-header__title">Welcome to KokoaClone</h1>
+      <p class="welcome-header__text">
+        If you have a kokoa account, log in with your email or phone number.
+      </p>
+    </header>
+    <form id="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <input type="submit" value="Sign Up" />
+      <a href="#">Find Kokoa Account or Password</a>
+      <!-- form에서는 버튼을 추가하는 방법 두가지 있음. 하나는 <input type="submit" value="" />으로 혹은 button태그 이용하는 방법 있음. -->
+      <!-- 이 프로젝트에서 form을 쓰게 되는 일은 아마 1번? 혹은 2번 밖에 없을꺼야. header와 다르게 말이지. 그래서 form에 id를 줄꺼래. -->
+      <!-- 더불어 a 링크 역시 form밖에 있던 것을 안으로 넣어주었는데, 왜냐하면 이 프로젝트에서 링크는 정말정말 많을테니까 말이지. 그래서 form 안에 넣어서 css에서 login-form을 통해 point할 수 있도록 하는 것. 이 하나의 링크때문에 id나 class를 만드는 것은 비효율적이라고 판단했대.  -->
+    </form>
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
