--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <p class="welcome-header__text">
         If you have a kokoa account, log in with your email or phone number.
       </p>
+      <span class="welcome-header__greeting-emoticon">📱 ʕʘ‿ʘʔ 💻</span>
     </header>
     <form id="login-form">
       <input type="text" placeholder="Email or phone number" />
