--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,53 @@
-hello!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Friends - KokoaClone</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Servie</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+        <!--javascript로 시간을 실시간으로 넣을 수도 있을듯!-->
+      </div>
+      <div class="status-bar__column">
+        <i class="fas fa-lock"></i>
+        <span>100%</span>
+        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
+    </div>
+
+    <nav class="nav">
+      <!-- 지난번 수업에서는 id랑 선택자랑 합쳐서 css 스타일 꾸며주는 것 보았는데, 사실 그것 매우 귀찮고 가독성이 떨어지는 작업이야. 그래서 이번 friend html에서는 class만 써서 해본다고 함. -->
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-lg"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"
+            ><i class="fas fa-ellipsis-h fa-lg"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+    <script
+      src="https://kit.fontawesome.com/004d579f6b.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
