--- a/friends.html
+++ b/friends.html
@@ -24,23 +24,36 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
     <nav class="nav">
       <!-- 지난번 수업에서는 id랑 선택자랑 합쳐서 css 스타일 꾸며주는 것 보았는데, 사실 그것 매우 귀찮고 가독성이 떨어지는 작업이야. 그래서 이번 friend html에서는 class만 써서 해본다고 함. -->
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-lg"></i
+            ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+          <a class="nav__link" href="#">
+            <span class="nav__notification">9</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
-            ><i class="fas fa-ellipsis-h fa-lg"></i
+          <a class="nav__link" href="#">
+            <div class="nav_notification"></div>
+            <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
