--- a/friends.html
+++ b/friends.html
@@ -33,6 +33,12 @@
       </div>
     </header>
 
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      <span>Friends' Names Display</span>
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
     <nav class="nav">
       <!-- 지난번 수업에서는 id랑 선택자랑 합쳐서 css 스타일 꾸며주는 것 보았는데, 사실 그것 매우 귀찮고 가독성이 떨어지는 작업이야. 그래서 이번 friend html에서는 class만 써서 해본다고 함. -->
       <ul class="nav__list">
