--- a/friends.html
+++ b/friends.html
@@ -39,6 +39,16 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="#" class="user-component__avatar" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">Chae</h4>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <!-- 지난번 수업에서는 id랑 선택자랑 합쳐서 css 스타일 꾸며주는 것 보았는데, 사실 그것 매우 귀찮고 가독성이 떨어지는 작업이야. 그래서 이번 friend html에서는 class만 써서 해본다고 함. -->
       <ul class="nav__list">
