--- a/friends.html
+++ b/friends.html
@@ -41,9 +41,10 @@
 
     <div class="user-component">
       <div class="user-component__column">
-        <img src="#" class="user-component__avatar" />
+        <img src="css/img/profile_userK.png" class="user-component__avatar" />
         <div class="user-component__text">
           <h4 class="user-component__title">Chae</h4>
+          <h6 class="user-component__subtitle">this is the test version</h6>
         </div>
       </div>
       <div class="user-component__column"></div>
