--- a/friends.html
+++ b/friends.html
@@ -38,17 +38,42 @@
       <span>Friends' Names Display</span>
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="css/img/profile_userK.png" class="user-component__avatar" />
-        <div class="user-component__text">
-          <h4 class="user-component__title">Chae</h4>
-          <h6 class="user-component__subtitle">this is the test version</h6>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="css/img/profile_userK.png"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Chae</h4>
+            <!-- <h6 class="user-component__subtitle">this is the test version</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="css/img/profile_userK.png"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Channel</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+    </main>
 
     <nav class="nav">
       <!-- 지난번 수업에서는 id랑 선택자랑 합쳐서 css 스타일 꾸며주는 것 보았는데, 사실 그것 매우 귀찮고 가독성이 떨어지는 작업이야. 그래서 이번 friend html에서는 class만 써서 해본다고 함. -->
