--- a/find.html
+++ b/find.html
@@ -67,6 +67,34 @@
           </div>
         </div>
       </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span>
+            Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i>
+          </span>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#energetickorea</h5>
+            <h6 class="open-post__hastag">#fighting#bacchus</h6>
+            <div class="open-post__members">
+              <img src="css/img/profile_userK.png" />
+              <span class="open-post__member-count">1k members</span>
+              <div class="divider">|</div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__preview">
+              <img src="css/img/followme.jpg" />
+              <div class="open-post__heart-count">
+                <i class="fas fa-heart fa-xs"></i><span>293</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <nav class="nav">
