--- a/chat.html
+++ b/chat.html
@@ -1,10 +1,11 @@
+<!-- chats.html과 헷갈리지 말것! 이것은 유저와 유저가 대화할 수 있는 채팅방! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - KokoaClone</title>
+    <title>Chat with welovekatya - KokoaClone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,36 +24,44 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
-        </span>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <i class="fas fa-angle-left fa-2x"></i>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">welovekatya</h1>
+      </div>
+      <div class="alt-header__column">
+        <i class="fas fa-search fa-2x"></i>
+        <i class="fas fa-grip-lines fa-2x"></i>
       </div>
     </header>
-
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="css/img/katya.jpg" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">welovekatya</h4>
-            <h6 class="user-component__subtitle">
-              Hello, I'm Katrina Zamolochicova but u can call me Katya
-            </h6>
+      <ul class="settings-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+            <span>Notices</span>
           </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">22:22</span>
-          <div class="badge">2</div>
-          <!-- 여기 빨강색 알림 숫자가 계속 반복되는 것을 알 수 있어. 그래서 component로 따로 만들어서 계속 계속 써먹을꺼야. 이렇듯 코딩에서는 지속적으로 반복되는 요소들을 묶는 작업이 필요해. -->
-        </div>
-      </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+            <span>Kokoa Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">
+            <span>Latest Version</span>
+          </div>
+        </li>
+      </ul>
     </main>
 
     <nav class="nav">
@@ -66,7 +75,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">9</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
