--- a/find.html
+++ b/find.html
@@ -29,7 +29,9 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <!-- To Do : 알림 점 만들기.  -->
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
