--- a/more.html
+++ b/more.html
@@ -30,7 +30,9 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <!-- To Do : 알림 점 만들기.  -->
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
@@ -97,11 +99,11 @@
             <div class="more-suggestions__icon-image">
               <img src="css/img/bosh.png" />
             </div>
-            <span class="more-suggestions__icon-text">KaKaostory</span>
+            <span class="more-suggestions__icon-text">HelloKatya</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <img src="css/img/bosh.png" />
+              <i class="fas fa-smile-wink fa-2x"></i>
             </div>
             <span class="more-suggestions__icon-text">KaKaostory</span>
           </div>
