--- a/chat.html
+++ b/chat.html
@@ -45,13 +45,32 @@
         <div class="message-row__content">
           <span class="message__sender">Katya</span>
           <div class="message__column-info">
-            <span class="message__text">Hello👋</span>
+            <span class="message__bubble">Hello 👋</span>
+            <div class="message__time">21:27</div>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__column-info">
+            <span class="message__bubble">Hello ʕʘ‿ʘʔ</span>
             <div class="message__time">21:27</div>
           </div>
         </div>
       </div>
     </main>
-
+    <form class="reply">
+      <div class="reply__column">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message! ʕʘ‿ʘʔ" />
+        <i class="far fa-smile"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
