--- a/friends.html
+++ b/friends.html
@@ -112,6 +112,11 @@
         </li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment"><span>📱 ʕʘ‿ʘʔ</span></i>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
