--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <!-- 이 프로젝트에서 form을 쓰게 되는 일은 아마 1번? 혹은 2번 밖에 없을꺼야. header와 다르게 말이지. 그래서 form에 id를 줄꺼래. -->
       <!-- 더불어 a 링크 역시 form밖에 있던 것을 안으로 넣어주었는데, 왜냐하면 이 프로젝트에서 링크는 정말정말 많을테니까 말이지. 그래서 form 안에 넣어서 css에서 login-form을 통해 point할 수 있도록 하는 것. 이 하나의 링크때문에 id나 class를 만드는 것은 비효율적이라고 판단했대.  -->
     </form>
+
+    <div id="no-mobile">
+      <span>🖥🙊💻 Your screen is too big! 🖥🙊💻</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
