--- a/more.html
+++ b/more.html
@@ -150,6 +150,11 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>🖥🙊💻 Your screen is too big! 🖥🙊💻</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
