--- a/chat.html
+++ b/chat.html
@@ -71,6 +71,11 @@
         </button>
       </div>
     </form>
+
+    <div id="no-mobile">
+      <span>🖥🙊💻 Your screen is too big! 🖥🙊💻</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
