--- a/friends.html
+++ b/friends.html
@@ -117,6 +117,10 @@
       <i class="fas fa-comment"><span>📱 ʕʘ‿ʘʔ</span></i>
     </div>
 
+    <div id="no-mobile">
+      <span>🖥🙊💻 Your screen is too big! 🖥🙊💻</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/004d579f6b.js"
       crossorigin="anonymous"
