--- a/chats.html
+++ b/chats.html
@@ -37,22 +37,24 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="css/img/katya.jpg" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">welovekatya</h4>
-            <h6 class="user-component__subtitle">
-              Hello, I'm Katrina Zamolochicova but u can call me Katya
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="css/img/katya.jpg" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">welovekatya</h4>
+              <h6 class="user-component__subtitle">
+                Hello, I'm Katrina Zamolochicova but u can call me Katya
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">22:22</span>
+            <div class="badge">2</div>
+            <!-- 여기 빨강색 알림 숫자가 계속 반복되는 것을 알 수 있어. 그래서 component로 따로 만들어서 계속 계속 써먹을꺼야. 이렇듯 코딩에서는 지속적으로 반복되는 요소들을 묶는 작업이 필요해. -->
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">22:22</span>
-          <div class="badge">2</div>
-          <!-- 여기 빨강색 알림 숫자가 계속 반복되는 것을 알 수 있어. 그래서 component로 따로 만들어서 계속 계속 써먹을꺼야. 이렇듯 코딩에서는 지속적으로 반복되는 요소들을 묶는 작업이 필요해. -->
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
